--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -3,8 +3,8 @@
     <ul>
         <a href="">
             <li>{{"Social Media" | translate}}</li>
-        </a><a href="">
-            <li>{{"Support and Help" | translate}}</li>
+        </a><a routerLink="/help-support">
+            <li>{{"Help Center" | translate}}</li>
         </a><a href="">
             <li>{{"About" | translate}}</li>
         </a>
