--- a/src/app/routh/home-page/home-page.component.html
+++ b/src/app/routh/home-page/home-page.component.html
@@ -1,3 +1,4 @@
 <app-basic-layout>
     <app-hotel-filter (changeClick)="onFilterChange($event)" ></app-hotel-filter>
+    <app-location *ngIf="showOverlay" (close)="closeOverlay()"></app-location>
 </app-basic-layout>
