--- a/src/app/shared/faq-list/faq-list.component.html
+++ b/src/app/shared/faq-list/faq-list.component.html
@@ -8,7 +8,7 @@
             </div>
         </li>
         @if (listItem.showAnswer) {
-            <div>
+            <div class="answer">
                 {{listItem.answer}}
             </div>
         }
@@ -16,3 +16,4 @@
         </ul>
     </div>
 </app-basic-layout>
+
