--- a/src/app/shared/hotel-filter/hotel-filter.component.css
+++ b/src/app/shared/hotel-filter/hotel-filter.component.css
@@ -38,6 +38,7 @@
   cursor: pointer;
   border-bottom: 1px solid;
   margin-bottom: 20px;
+  background-color: white;
   }
 .location button:hover{
   border-bottom: 1px solid #000;
