yönetici girişi eklendi login girişiyle birlikte back ende bağlandı ve submit olduktan sonraki durumlar eklendi

--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -28,3 +28,19 @@ a{
     font-weight: 600;
     letter-spacing: 2px;
 }
+.question{
+ text-decoration: none;
+ border: 2px solid #f07417;
+ color: #f07417;
+ background-color: #fff;
+ border-radius: 20px;
+ padding: 5px 10px;
+ position: absolute;
+ right: 50px;
+ bottom: 130px;
+ transition: transform 1s ease;
+ transform: translateY(0);
+}
+.question:hover{
+transform: translateY(20%);
+}
