admin panel başlangıç

--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -12,6 +12,8 @@ footer{
     border-top:2px solid #fff ;
     border-bottom:2px solid #fff;
     color: #fff;
+    z-index: 1000;
+    margin-top: 10px;
 }
 ul{
     display: flex;
