--- a/src/app/routh/manager/login/manager-login-page.component.css
+++ b/src/app/routh/manager/login/manager-login-page.component.css
@@ -87,6 +87,7 @@ textarea{
 input,textarea,select{
     border: 1.5px solid #ff942c;
     outline: 0;
+    border-radius: 15px;
 }
 .form,.general-area{
     display: flex;
