--- a/src/app/layout/basic-layout/basic-layout.component.html
+++ b/src/app/layout/basic-layout/basic-layout.component.html
@@ -1,5 +1,6 @@
 <app-navigation></app-navigation>
 <main>
     <ng-content></ng-content>
+    <ng-content select=".extra-content"></ng-content>
 </main>
 <app-footer></app-footer>
